# -ZeroMQ-hello-world-docker

./: README.md  docker-compose.yml
zmq-hello-world-client-node/: CMakeLists.txt
zmq-hello-world-client-node/src/: hwclient.c
zmq-hello-world-server-node/: CMakeLists.txt  Dockerfile
zmq-hello-world-server-node/src/: hwserver.c
